trying to fix banner on mobile

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -140,16 +140,3 @@
   color: #ffffff;
   text-shadow: 0px 5px 3px rgba(0, 0, 0, 0.95);
 }
-
-@media screen and (max-width: 500px) {
-  .slideshowContainer {
-    width: 100%;
-    height: 100%;
-    max-height: 130%;
-    position: absolute;
-    margin-top: -10%;
-    margin-left: -50%;
-    z-index: -1; 
-    /* Adjust the margin-top to create space below the menuBanner */
-  }
-}
